--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,22 +10,22 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
-        <meta name="author" content="">
+        <meta name="author" content="Paul Taylor">
 
         <!-- CSS Global Compulsory-->
-        <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
-        <link rel="stylesheet" href="assets/css/style.css">
-        <link rel="stylesheet" href="assets/css/headers/header1.css">
-        <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
-        <link rel="stylesheet" href="assets/css/style_responsive.css">
+        <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" href="/assets/css/style.css">
+        <link rel="stylesheet" href="/assets/css/headers/header1.css">
+        <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
+        <link rel="stylesheet" href="/assets/css/style_responsive.css">
         <link rel="shortcut icon" href="favicon.ico">
         <!-- CSS Implementing Plugins -->
-        <link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.css">
-        <link rel="stylesheet" href="assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
-        <link rel="stylesheet" href="assets/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
+        <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
+        <link rel="stylesheet" href="/assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
+        <link rel="stylesheet" href="/assets/plugins/parallax-slider/css/parallax-slider.css" type="text/css">
         <!-- CSS Theme -->
-        <link rel="stylesheet" href="assets/css/themes/light.css" id="style_color">
-        <link rel="stylesheet" href="assets/css/themes/headers/header1-light.css" id="style_color-header-1">
+        <link rel="stylesheet" href="/assets/css/themes/light.css" id="style_color">
+        <link rel="stylesheet" href="/assets/css/themes/headers/header1-light.css" id="style_color-header-1">
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
     </head>
 
@@ -48,7 +48,7 @@
             <div class="container">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="index.html"><img id="logo-header" src="image/bohemeLogo.png" alt="Logo"></a>
+                    <a href="{{ path('NmsAdminBundle_homepage') }}"><img id="logo-header" src="/image/bohemeLogo.png" alt="Logo"></a>
                 </div><!-- /logo -->
 
                 <!-- Menu -->
@@ -146,7 +146,7 @@
 
         <!--=== Slider ===-->
         <div class="center-img">
-            <img src="image/home.png" alt="" />
+            <img src="/image/home.png" alt="" />
         </div>
         <!--=== End Slider ===-->
 
@@ -201,7 +201,7 @@
                 <li class="span3">
                     <div class="thumbnail-style thumbnail-kenburn">
                         <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="assets/img/carousel/2.jpg" alt="" /></div>
+                            <div class="overflow-hidden"><img src="/assets/img/carousel/2.jpg" alt="" /></div>
                             <a class="btn-more hover-effect" href="#">read more +</a>
                         </div>
                         <h3><a class="hover-effect" href="#">Our Work</a></h3>
@@ -211,7 +211,7 @@
                 <li class="span3">
                     <div class="thumbnail-style thumbnail-kenburn">
                         <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="assets/img/carousel/3.jpg" alt="" /></div>
+                            <div class="overflow-hidden"><img src="/assets/img/carousel/3.jpg" alt="" /></div>
                             <a class="btn-more hover-effect" href="#">read more +</a>
                         </div>
                         <h3><a class="hover-effect" href="#">One More Work</a></h3>
@@ -221,7 +221,7 @@
                 <li class="span3">
                     <div class="thumbnail-style thumbnail-kenburn">
                         <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="assets/img/carousel/9.jpg" alt="" /></div>
+                            <div class="overflow-hidden"><img src="/assets/img/carousel/9.jpg" alt="" /></div>
                             <a class="btn-more hover-effect" href="#">read more +</a>
                         </div>
                         <h3><a class="hover-effect" href="#">Another Work</a></h3>
@@ -231,7 +231,7 @@
                 <li class="span3">
                     <div class="thumbnail-style thumbnail-kenburn">
                         <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="assets/img/carousel/10.jpg" alt="" /></div>
+                            <div class="overflow-hidden"><img src="/assets/img/carousel/10.jpg" alt="" /></div>
                             <a class="btn-more hover-effect" href="#">read more +</a>
                         </div>
                         <h3><a class="hover-effect" href="#">Huge Work</a></h3>
@@ -246,7 +246,7 @@
                 <!-- Who We Are -->
                 <div class="span8">
                     <div class="headline"><h3>Welcome To Cafe Boheme</h3></div>
-                    <p><img class="pull-left lft-img-margin img-width-200" src="assets/img/carousel/6.jpg" alt="" />Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals. It works on all major web browsers, tablets and phone.</p>
+                    <p><img class="pull-left lft-img-margin img-width-200" src="/assets/img/carousel/6.jpg" alt="" />Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals. It works on all major web browsers, tablets and phone.</p>
                     <ul class="unstyled">
                         <li><i class="icon-ok color-green"></i> Donec id elit non mi porta gravida</li>
                         <li><i class="icon-ok color-green"></i> Corporate and Creative</li>
@@ -266,19 +266,19 @@
                     <div id="myCarousel" class="carousel slide">
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img src="assets/img/carousel/5.jpg" alt="">
+                                <img src="/assets/img/carousel/5.jpg" alt="">
                                 <div class="carousel-caption">
                                     <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="assets/img/carousel/4.jpg" alt="">
+                                <img src="/assets/img/carousel/4.jpg" alt="">
                                 <div class="carousel-caption">
                                     <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
                                 </div>
                             </div>
                             <div class="item">
-                                <img src="assets/img/carousel/3.jpg" alt="">
+                                <img src="/assets/img/carousel/3.jpg" alt="">
                                 <div class="carousel-caption">
                                     <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
                                 </div>
@@ -306,11 +306,11 @@
                     <div class="span4">
                         <!-- About -->
                         <div class="headline"><h3>About</h3></div>
-                        <p class="margin-bottom-25">Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals.</p>
+                        <p class="margin-bottom-25">Who is Cafe Boheme.</p>
 
                         <!-- Monthly Newsletter -->
                         <div class="headline"><h3>Monthly Newsletter</h3></div>
-                        <p>Subscribe to our newsletter and stay up to date with the latest news and deals!</p>
+                        <p>Subscribe to our newsletter and stay up to date with the latest news and meals!</p>
                         <form class="form-inline">
                             <div class="input-append">
                                 <input type="text" placeholder="Email Address" class="input-medium">
@@ -332,7 +332,7 @@
                             California, US <br />
                             Phone: 800 123 3456 <br />
                             Fax: 800 123 3456 <br />
-                            Email: <a href="mailto:info@anybiz.com" class="">info@anybiz.com</a>
+                            Email: <a href="mailto:info@cafeboheme.com.au" class="">info@cafeboheme.com.au</a>
                         </address>
 
                         <!-- Stay Connected -->
@@ -357,10 +357,10 @@
             <div class="container">
                 <div class="row-fluid">
                     <div class="span8">
-                        <p>2013 &copy; Unify. ALL Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+                        <p>2013 &copy; Cafe Boheme. All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
                     </div>
                     <div class="span4">
-                        <a href="index.html"><img id="logo-footer" src="assets/img/logo2-default.png" class="pull-right" alt="" /></a>
+                        <a href="{{ path('NmsAdminBundle_homepage') }}"><img id="logo-footer" src="/image/bohemeLogo2.png" class="pull-right" alt="" /></a>
                     </div>
                 </div><!--/row-fluid-->
             </div><!--/container-->
