--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,8 @@
         <link rel="stylesheet" href="/assets/css/headers/header1.css">
         <link rel="stylesheet" href="/assets/plugins/bootstrap/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="/assets/css/style_responsive.css">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="shortcut icon" href="{{ asset('/images/favicons/favicon.ico')}}">
+
         <!-- CSS Implementing Plugins -->
         <link rel="stylesheet" href="/assets/plugins/font-awesome/css/font-awesome.css">
         <link rel="stylesheet" href="/assets/plugins/flexslider/flexslider.css" type="text/css" media="screen">
@@ -37,7 +38,29 @@
         <div class="top">
             <div class="container">
                 <ul class="loginbar pull-right">
-                    <li><a href="page_login.html" class="login-btn">Login</a></li>
+                    {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+                    <li class="dropdown user">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <span class="username">{{ app.user.name }}</span>
+                            <i class="icon-angle-down"></i>
+                        </a>
+{#                          {{dump(app.user)}}#}
+{#                          path('user_list', { 'id': user.id })#}
+                        <ul class="dropdown-menu">
+                            <li><a href="{{ path('user_show', { 'id': app.user.id }) }}"><i class="icon-user"></i> My Profile</a></li>
+                            <li><a href="{{ path('user_password') }}"><i class="icon-lock"></i> Change password</a></li>
+                            {% if is_granted("ROLE_CLUB") %}
+                            <li><a href="{{ path('user_list') }}"><i class="icon-tasks"></i> User List</a></li>
+                            <li><a href="{{ path('user_new') }}"><i class="icon-envelope"></i> Register new user</a></li>
+                            {% endif %}
+                            <li class="divider"></li>
+                            <li><a href="{{ path('logout') }}"><i class="icon-key"></i> Log Out</a></li>
+                        </ul>
+                    </li>
+                    {% else %}
+                    <a href="{{ path('login') }}" class="login-btn">Login</a>
+                    {% endif %}
+
                 </ul>
             </div>
         </div><!--/top-->
@@ -164,35 +187,6 @@
         <!--=== Content Part ===-->
         <div class="container">
             <!-- Service Blocks -->
-            <div class="row-fluid">
-                <div class="span4">
-                    <div class="service clearfix">
-                        <i class="icon-resize-small"></i>
-                        <div class="desc">
-                            <h4>Fully Responsive</h4>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="span4">
-                    <div class="service clearfix">
-                        <i class="icon-cogs"></i>
-                        <div class="desc">
-                            <h4>HTML5 + CSS3</h4>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="span4">
-                    <div class="service clearfix">
-                        <i class="icon-plane"></i>
-                        <div class="desc">
-                            <h4>Launch Ready</h4>
-                            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus etiam sem...</p>
-                        </div>
-                    </div>
-                </div>
-            </div><!--/row-fluid-->
             <!-- //End Service Blokcs -->
 
             <!-- Recent Works -->
@@ -241,61 +235,6 @@
             </ul><!--/thumbnails-->
             <!-- //End Recent Works -->
 
-            <!-- Information Blokcs -->
-            <div class="row-fluid margin-bottom-20">
-                <!-- Who We Are -->
-                <div class="span8">
-                    <div class="headline"><h3>Welcome To Cafe Boheme</h3></div>
-                    <p><img class="pull-left lft-img-margin img-width-200" src="/assets/img/carousel/6.jpg" alt="" />Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals. It works on all major web browsers, tablets and phone.</p>
-                    <ul class="unstyled">
-                        <li><i class="icon-ok color-green"></i> Donec id elit non mi porta gravida</li>
-                        <li><i class="icon-ok color-green"></i> Corporate and Creative</li>
-                        <li><i class="icon-ok color-green"></i> Responsive Bootstrap Template</li>
-                        <li><i class="icon-ok color-green"></i> Corporate and Creative</li>
-                    </ul><br>
-
-                    <blockquote class="hero-unify">
-                        <p>Award winning digital agency. We bring a personal and effective approach to every project we work on, which is why. Unify is an incredibly beautiful responsive Bootstrap Template for corporate professionals.</p>
-                        <small>CEO, Jack Bour</small>
-                    </blockquote>
-                </div><!--/span8-->
-
-                <!-- Latest Shots -->
-                <div class="span4">
-                    <div class="headline"><h3>Latest Shots</h3></div>
-                    <div id="myCarousel" class="carousel slide">
-                        <div class="carousel-inner">
-                            <div class="item active">
-                                <img src="/assets/img/carousel/5.jpg" alt="">
-                                <div class="carousel-caption">
-                                    <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <img src="/assets/img/carousel/4.jpg" alt="">
-                                <div class="carousel-caption">
-                                    <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                                </div>
-                            </div>
-                            <div class="item">
-                                <img src="/assets/img/carousel/3.jpg" alt="">
-                                <div class="carousel-caption">
-                                    <p>Cras justo odio, dapibus ac facilisis in, egestas.</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="carousel-arrow">
-                            <a class="left carousel-control" href="#myCarousel" data-slide="prev"><i class="icon-angle-left"></i></a>
-                            <a class="right carousel-control" href="#myCarousel" data-slide="next"><i class="icon-angle-right"></i></a>
-                        </div>
-                    </div>
-                </div><!--/span4-->
-            </div><!--/row-fluid-->
-            <!-- //End Information Blokcs -->
-
-            <!-- Our Clients -->
-            <!-- //End Our Clients -->
         </div><!--/container-->
         <!-- End Content Part -->
 
@@ -328,8 +267,8 @@
                         <!-- Monthly Newsletter -->
                         <div class="headline"><h3>Contact Us</h3></div>
                         <address>
-                            25, Lorem Lis Street, Orange <br />
-                            California, US <br />
+                            5 Kellet Street <br />
+                            Potts Point, NSW  <br />
                             Phone: 800 123 3456 <br />
                             Fax: 800 123 3456 <br />
                             Email: <a href="mailto:info@cafeboheme.com.au" class="">info@cafeboheme.com.au</a>
@@ -368,17 +307,17 @@
         <!--=== End Copyright ===-->
 
         <!-- JS Global Compulsory -->
-        <script type="text/javascript" src="assets/js/jquery-1.8.2.min.js"></script>
-        <script type="text/javascript" src="assets/js/modernizr.custom.js"></script>
-        <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="/assets/js/jquery-1.8.2.min.js"></script>
+        <script type="text/javascript" src="/assets/js/modernizr.custom.js"></script>
+        <script type="text/javascript" src="/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
         <!-- JS Implementing Plugins -->
-        <script type="text/javascript" src="assets/plugins/flexslider/jquery.flexslider-min.js"></script>
-        <script type="text/javascript" src="assets/plugins/parallax-slider/js/modernizr.js"></script>
-        <script type="text/javascript" src="assets/plugins/parallax-slider/js/jquery.cslider.js"></script>
-        <script type="text/javascript" src="assets/plugins/back-to-top.js"></script>
+        <script type="text/javascript" src="/assets/plugins/flexslider/jquery.flexslider-min.js"></script>
+        <script type="text/javascript" src="/assets/plugins/parallax-slider/js/modernizr.js"></script>
+        <script type="text/javascript" src="/assets/plugins/parallax-slider/js/jquery.cslider.js"></script>
+        <script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
         <!-- JS Page Level -->
-        <script type="text/javascript" src="assets/js/app.js"></script>
-        <script type="text/javascript" src="assets/js/pages/index.js"></script>
+        <script type="text/javascript" src="/assets/js/app.js"></script>
+        <script type="text/javascript" src="/assets/js/pages/index.js"></script>
         <script type="text/javascript">
             jQuery(document).ready(function() {
                 App.init();
