--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,9 +28,15 @@
         <link rel="stylesheet" href="/assets/css/themes/light.css" id="style_color">
         <link rel="stylesheet" href="/assets/css/themes/headers/header1-light.css" id="style_color-header-1">
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+
+        {% block stylesheets %}
+            {% stylesheets  'css/*'  %}
+            {% endstylesheets %}
+        {% endblock %}
     </head>
 
     <body>
+        {% set version = constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION')%}
         <!--=== Style Switcher ===-->
         <!--=== End Style Switcher ===-->
 
@@ -49,7 +55,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="{{ path('user_show', { 'id': app.user.id }) }}"><i class="icon-user"></i> My Profile</a></li>
                             <li><a href="{{ path('user_password') }}"><i class="icon-lock"></i> Change password</a></li>
-                            {% if is_granted("ROLE_CLUB") %}
+                            {% if is_granted("ROLE_ADMIN") %}
                             <li><a href="{{ path('user_list') }}"><i class="icon-tasks"></i> User List</a></li>
                             <li><a href="{{ path('user_new') }}"><i class="icon-envelope"></i> Register new user</a></li>
                             {% endif %}
@@ -71,7 +77,7 @@
             <div class="container">
                 <!-- Logo -->
                 <div class="logo">
-                    <a href="{{ path('NmsAdminBundle_homepage') }}"><img id="logo-header" src="/image/bohemeLogo.png" alt="Logo"></a>
+                    <a href="{{ path('boheme_cafe_homepage') }}"><img id="logo-header" src="/image/bohemeLogo.png" alt="Logo"></a>
                 </div><!-- /logo -->
 
                 <!-- Menu -->
@@ -152,6 +158,13 @@
                                 </li>
                                 <li><a class="search"><i class="icon-search search-btn"></i></a></li>
                             </ul>
+                            {{ knp_menu_render('NmsAdminBundle:Builder:mainMenu',
+                                                {'currentClass': 'active',
+                                                 'ancestorClass': 'active',
+                                                 'firstClass': 'start',
+                                                 'allow_safe_labels': 'true'}) }}
+                            {% block navigation %}{% endblock %}
+
                             <div class="search-open">
                                 <div class="input-append">
                                     <form>
@@ -167,76 +180,47 @@
         </div><!--/header -->
         <!--=== End Header ===-->
 
-        <!--=== Slider ===-->
-        <div class="center-img">
-            <img src="/image/home.png" alt="" />
-        </div>
-        <!--=== End Slider ===-->
-
-        <!--=== Purchase Block ===-->
-        <div class="row-fluid purchase margin-bottom-30">
-            <div class="container">
-                <div class="span11">
-                    <span>Cafe Boheme is a different cafe style restaurant.</span>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
-                </div>
+        <!--page content starts here-->
+        <h3 class="page-title">
+            {% block pagetitle %}
+            Dashboard <small>statistics and more</small>
+            {% endblock %}
+        </h3>
+        {% for flashMessage in app.session.flashbag.get('success') %}
+            <div class="alert alert-success">
+                <button class="close" data-dismiss="alert"></button>
+                <i class="icon-ok-sign"></i>
+                <strong>Success</strong> {{ flashMessage }}
             </div>
-        </div><!--/row-fluid-->
-        <!-- End Purchase Block -->
+        {% endfor %}
 
-        <!--=== Content Part ===-->
-        <div class="container">
-            <!-- Service Blocks -->
-            <!-- //End Service Blokcs -->
+        {% for flashMessage in app.session.flashbag.get('info') %}
+            <div class="alert alert-info">
+                <button class="close" data-dismiss="alert"></button>
+                <i class="icon-info-sign"></i>
+                <strong>Info</strong> {{ flashMessage }}
+            </div>
+        {% endfor %}
 
-            <!-- Recent Works -->
-            <div class="headline"><h3>Recent Works</h3></div>
-            <ul class="thumbnails">
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/2.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Our Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/3.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">One More Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/9.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Another Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/10.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Huge Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-            </ul><!--/thumbnails-->
-            <!-- //End Recent Works -->
+        {% for flashMessage in app.session.flashbag.get('error') %}
+            <div class="alert alert-error">
+                <button class="close" data-dismiss="alert"></button>
+                <i class=" icon-exclamation-sign"></i>
+                <strong>Error</strong> {{ flashMessage }}
+            </div>
+        {% endfor %}
 
-        </div><!--/container-->
-        <!-- End Content Part -->
+        {% for flashMessage in app.session.flashbag.get('warning') %}
+            <div class="alert">
+                <button class="close" data-dismiss="alert"></button>
+                <i class="icon-warning-sign"></i>
+                <strong>Warning</strong> {{ flashMessage }}
+            </div>
+        {% endfor %}
+        <!-- END PAGE HEADER-->
+        {% block body %}{% endblock %}
+
+        <!--page content ends here-->
 
         <!--=== Footer ===-->
         <div class="footer">
@@ -296,10 +280,12 @@
             <div class="container">
                 <div class="row-fluid">
                     <div class="span8">
-                        <p>2013 &copy; Cafe Boheme. All Rights Reserved. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+                        <p>2013 &copy; Network IMS Pty Ltd. All Rights Reserved. Version {{ app_version }} (SF{{ version }})
+                            <a href="#">Privacy Policy</a>
+                        </p>
                     </div>
                     <div class="span4">
-                        <a href="{{ path('NmsAdminBundle_homepage') }}"><img id="logo-footer" src="/image/bohemeLogo2.png" class="pull-right" alt="" /></a>
+                        <a href="{{ path('boheme_cafe_homepage') }}"><img id="logo-footer" src="/image/bohemeLogo2.png" class="pull-right" alt="" /></a>
                     </div>
                 </div><!--/row-fluid-->
             </div><!--/container-->
@@ -315,6 +301,7 @@
         <script type="text/javascript" src="/assets/plugins/parallax-slider/js/modernizr.js"></script>
         <script type="text/javascript" src="/assets/plugins/parallax-slider/js/jquery.cslider.js"></script>
         <script type="text/javascript" src="/assets/plugins/back-to-top.js"></script>
+        {% block javascripts %} {% endblock %}
         <!-- JS Page Level -->
         <script type="text/javascript" src="/assets/js/app.js"></script>
         <script type="text/javascript" src="/assets/js/pages/index.js"></script>
@@ -328,6 +315,5 @@
             <!--[if lt IE 9]>
                 <script src="assets/js/respond.js"></script>
             <![endif]-->
-
         </body>
     </html>
