remove page title from default page

--- a/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
@@ -10,12 +10,11 @@
 {% block stylesheets %}
 {% endblock %}
 
-{% block pagetitle %} Page title {% endblock %}
+{% block pagetitle %}{% endblock %}
 
 {% block breadcrumb %}{% endblock %}
 
 {% block body -%}
-Hello {{ name }}!
         <!--=== Slider ===-->
         <div class="center-img">
             <img src="/image/home.png" alt="" />
