progress contact page

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -254,6 +254,7 @@
                 App.init();
 <!--        App.initSliders();-->
 <!--        Index.initParallaxSlider();-->
+            {% block jqueryinit %} {% endblock %}
             });
             </script>
             <!--[if lt IE 9]>
