--- a/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/contact.html.twig
@@ -15,74 +15,65 @@
 {% block breadcrumb %}{% endblock %}
 
 {% block body -%}
-        <!--=== Slider ===-->
-        <div class="center-img">
-            <img src="/image/contact.png" alt="" />
-        </div>
-        <!--=== End Slider ===-->
+<div class="container">
+	<div class="row-fluid">
+		<div class="span9">
+            <div id="map" class="map map-box map-box-space margin-bottom-40">
+            </div><!---/map-->
 
-        <!--=== Purchase Block ===-->
-        <div class="row-fluid purchase margin-bottom-30">
-            <div class="container">
-                <div class="span11">
-                    <span>Cafe Boheme is a different cafe style restaurant.</span>
-                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
-                </div>
-            </div>
-        </div><!--/row-fluid-->
-        <!-- End Purchase Block -->
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas feugiat. Et harum quidem rerum facilis est et expedita distinctio lorem ipsum dolor sit amet, consectetur adipiscing elit landitiis.</p><br />
+			<form>
+                <label>Name</label>
+                <input type="text" class="span7" />
+                <label>Email <span class="color-red">*</span></label>
+                <input type="text" class="span7" />
+                <label>Message</label>
+                <textarea rows="8" class="span10"></textarea>
+                <p><button type="submit" class="btn-u">Send Message</button></p>
+            </form>
+        </div><!--/span9-->
 
-        <!--=== Content Part ===-->
-        <div class="container">
-            <!-- Service Blocks -->
-            <!-- //End Service Blokcs -->
+        <div class="span3">
+            <!-- Contacts -->
+            <div class="headline"><h3>Contacts</h3></div>
+            <ul class="unstyled who margin-bottom-20">
+                <li><a href="#"><i class="icon-home"></i>5 Kellet Streat, Potts Point </a></li>
+                <li><a href="#"><i class="icon-envelope-alt"></i>info@cafeboheme.com.au</a></li>
+                <li><a href="#"><i class="icon-phone-sign"></i>+61 2 9999 9999</a></li>
+                <li><a href="#"><i class="icon-globe"></i>http://www.cafeboheme.com.au</a></li>
+            </ul>
 
-            <!-- Recent Works -->
-            <div class="headline"><h3>Recent Works</h3></div>
-            <ul class="thumbnails">
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/2.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Our Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/3.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">One More Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/9.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Another Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-                <li class="span3">
-                    <div class="thumbnail-style thumbnail-kenburn">
-                        <div class="thumbnail-img">
-                            <div class="overflow-hidden"><img src="/assets/img/carousel/10.jpg" alt="" /></div>
-                            <a class="btn-more hover-effect" href="#">read more +</a>
-                        </div>
-                        <h3><a class="hover-effect" href="#">Huge Work</a></h3>
-                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, justo sit amet risus etiam porta sem.</p>
-                    </div>
-                </li>
-            </ul><!--/thumbnails-->
-            <!-- //End Recent Works -->
+            <!-- Business Hours -->
+            <div class="headline"><h3>Opening Hours</h3></div>
+            <ul class="unstyled">
+                <li><strong>Monday-Friday:</strong> 7am to 10pm</li>
+                <li><strong>Saturday:</strong> 8am to 3pm</li>
+                <li><strong>Sunday:</strong> Closed</li>
+            </ul>
 
-        </div><!--/container-->
-        <!-- End Content Part -->
+            <!-- Why we are? -->
+            <div class="headline"><h3>Why we are?</h3></div>
+            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum.</p>
+            <ul class="unstyled">
+                <li><i class="icon-ok color-green"></i> Odio dignissimos ducimus</li>
+                <li><i class="icon-ok color-green"></i> Blanditiis praesentium volup</li>
+                <li><i class="icon-ok color-green"></i> Eos et accusamus</li>
+            </ul>
+        </div><!--/span3-->
+    </div><!--/row-fluid-->
+</div><!--/container-->
+<!--=== End Content Part ===-->
 {% endblock %}
+
+{% block javascripts %}
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript" src="/assets/plugins/gmap/gmap.js"></script>
+<!-- JS Page Level -->
+<script type="text/javascript" src="/assets/js/pages/contact.js"></script>
+</script>
+{% endblock %}
+
+{% block jqueryinit %}
+Contact.initMap();
+{% endblock %}
+
