--- a/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/index.html.twig
@@ -28,7 +28,7 @@
                     {{ knp_pagination_filter(pagination, fields) }}
                     </div>
                     <div class="pull-right">
-                        <a href="{{ path('menu_new') }}" class="btn green"><i class="icon-plus"></i> Add</a>
+                        <a href="{{ path('meal_new') }}" class="btn green"><i class="icon-plus"></i> Add</a>
                     </div>
                 </div>
                 <table class="table table-striped">
