--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -28,11 +28,7 @@
         <link rel="stylesheet" href="/assets/css/themes/default.css" id="style_color">
         <link rel="stylesheet" href="/assets/css/themes/headers/default.css" id="style_color-header-1">
         <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
-
-        {% block stylesheets %}
-            {% stylesheets  'css/*'  %}
-            {% endstylesheets %}
-        {% endblock %}
+{% block stylesheets %}{% stylesheets 'css/*' %}{% endstylesheets %}{% endblock %}
     </head>
 
     <body>
