change theme to light

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,8 +25,11 @@
     <link rel="stylesheet" href="{{asset('theme/assets/plugins/parallax-slider/css/parallax-slider.css')}}">
 
     <!-- CSS Theme -->
-    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/default.css')}}" id="style_color">
-    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/headers/default.css')}}" id="style_color-header-1">
+{#    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/default.css')}}" id="style_color">#}
+{#    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/headers/default.css')}}" id="style_color-header-1">#}
+
+    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/light.css')}}" id="style_color">
+    <link rel="stylesheet" href="{{asset('theme/assets/css/themes/headers/header1-light.css')}}" id="style_color-header-1">
 
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
 {% block stylesheets %}{% stylesheets 'css/*' %}{% endstylesheets %}{% endblock %}
