add images to main page

--- a/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Default/index.html.twig
@@ -24,11 +24,21 @@
 <div class="purchase">
     <div class="container">
         <div class="row">
-            <div class="col-md-9">
-                <span>Cafe Boheme is a different cafe style restaurant.</span>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi  vehicula sem ut volutpat. Ut non libero magna fusce condimentum eleifend enim a feugiat.</p>
+            <div class="col-md-12">
+                <span>Cafe Boheme - the perfect escape.</span>
+                <div class="col-md-4">
+                    <p>The newest additon to the Potts Point dining precinct, Café Boheme, is making a Parisian style splash with owner and chef Darren Taylor utilising his Cordon Bleu training to serve the very best dine-­‐in and takeaway French cuisine.</p>
+                    <p>Bringing his 38 years of world-­‐renowned restaurant experience to Café Boheme, the chef who was formerly manning the pans at Buon Ricordo, will put his unique twist on the French classics by utilising the ﬁnest local and organic produce.</p>
+                </div>
+                <div class="col-md-4">
+                    <p>“Each dish has been inspired by local French cuisine and has been created using the ﬁnest locally sourced produce,” says Taylor. “By infusing French favourites with international ﬂavours, each dish on the Café Boheme menu is a true reﬂection of urban France.”</p>
+                    <p>“Our hand-­‐picked French favourites including brioche French toast with caramelised pears and vanilla bean ice cream, traditional Croque Madame and a delicious Café Boheme charcuterie plate. Patrons will also be served a selection of indulgent pastries and cakes cooked daily on site.  Customers will have the chance to take the Café Boheme experience home with Iggy’s bread and house-­‐ made fare including our signature duck liver parfait also available,” said Chef Taylor.</p>
+                </div>
+                <div class="col-md-4">
+                    <p>The wine list boasts a concise array of French wines from some of Frances most iconic wine styles and regions; Muscadet, Loire Valley, Chablis, Burgundy, Rhone Valley and Cotes-­‐du-­‐Rhone along with a selection of locally sourced drops.</p>
+                    <p>“We want Café Boheme to feel like the perfect escape for our patrons. The sun-­‐speckled front courtyard, coupled with the leafy surrounds of Kellet Street, creates a haven for the perfect morning coﬀee, a relaxed lunch or Sunday breakfast. We look forward to giving Potts Point something new, and bringing the wonderful ﬂavours of urban France to the locals.”</p>
+                </div>
             </div>
-        </div>
     </div>
 </div><!--/row-->
 <!-- End Purchase Block -->
@@ -40,13 +50,13 @@
 <!-- //End Service Blokcs -->
 
     <!-- Recent Works -->
-    <div class="headline"><h2>Recent Works</h2></div>
+    <div class="headline"><h2>Recent vistas</h2></div>
     <div class="row">
         <div class="col-md-3 col-sm-6">
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
             	<div class="thumbnail-img">
                     <div class="overflow-hidden">
-                        <img class="img-responsive" src="assets/img/main/2.jpg" alt="" />
+                        <img class="img-responsive" src="{{asset('image/front.png')}}" alt="" />
                     </div>
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
@@ -60,7 +70,7 @@
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
                 <div class="thumbnail-img">
                     <div class="overflow-hidden">
-                        <img class="img-responsive" src="assets/img/main/3.jpg" alt="" />
+                        <img class="img-responsive" src="{{asset('image/meal1.jpg')}}" alt="" />
                     </div>
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
@@ -74,7 +84,7 @@
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
                 <div class="thumbnail-img">
                     <div class="overflow-hidden">
-                        <img class="img-responsive" src="assets/img/main/9.jpg" alt="" />
+                        <img class="img-responsive" src="{{asset('image/meal2.jpg')}}" alt="" />
                     </div>
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
@@ -88,7 +98,7 @@
             <div class="thumbnails thumbnail-style thumbnail-kenburn">
                 <div class="thumbnail-img">
                     <div class="overflow-hidden">
-                        <img class="img-responsive" src="assets/img/main/10.jpg" alt="" />
+                        <img class="img-responsive" src="{{asset('image/interior.jpg')}}" alt="" />
                     </div>
                     <a class="btn-more hover-effect" href="#">read more +</a>
                 </div>
