--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,6 +60,8 @@
                     <li><a href="{{ path('user_new') }}"><i class="icon-envelope"></i> Register new user</a></li>
                     {% endif %}
                     <li class="divider"></li>
+                    <li><a href="{{ path('meal') }}"><i class="icon-food"></i> Meals</a></li>
+                    <li><a href="{{ path('wine') }}"><i class="icon-glass"></i> Wine</a></li>
                     <li><a href="{{ path('logout') }}"><i class="icon-key"></i> Log Out</a></li>
                 </ul>
             </li>
