--- a/src/Boheme/CafeBundle/Resources/views/Meal/show.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Meal/show.html.twig
@@ -1,64 +1,107 @@
-{% extends '::base.html.twig' %}
+{# src/Boheme/CafeBundle/Resources/views/Meal/show.html.twig #}
+{% extends 'NmsAdminBundle::layout.html.twig' %}
 
-{% block body -%}
-    <h1>Meal</h1>
+{% set page_title = 'view Meal' %}
 
-    <table class="record_properties">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ entity.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ entity.title }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ entity.content }}</td>
-            </tr>
-            <tr>
-                <th>Publish</th>
-                <td>{{ entity.publish|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Expire</th>
-                <td>{{ entity.expire|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Price</th>
-                <td>{{ entity.price }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{{ entity.created|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Createdby</th>
-                <td>{{ entity.createdby }}</td>
-            </tr>
-            <tr>
-                <th>Updated</th>
-                <td>{{ entity.updated|date('Y-m-d H:i:s') }}</td>
-            </tr>
-            <tr>
-                <th>Updatedby</th>
-                <td>{{ entity.updatedby }}</td>
-            </tr>
-        </tbody>
-    </table>
+{% block title %}
+{{ parent() }} {{page_title }}
+{% endblock %}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('meal') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('meal_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+{% block stylesheets %}
+{% endblock %}
+
+{% block javascripts %}
+{% endblock %}
+
+{% block pagetitle %} {% endblock %}
+
+{% block breadcrumb %}
+<li><a href="{{ path('meal') }}">Meal</a><i class="icon-angle-right"></i></li>
+<li><a href="{{ path('meal_show', { 'id': entity.id }) }}">View</a></li>
+{% endblock %}
+
+{% block body %}
+<!--=== Content Part ===-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel margin-bottom-40">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="icon-food"></i> {{page_title}}</h3>
+                </div>
+                <div class="panel-body form-horizontal">
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Id</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.id }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Title</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.title }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Description</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.content }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Sitting</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.sitting }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Menu group</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.menugroup }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Price</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.price }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Publish</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.publish|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Expire</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.expire|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Created</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.createdby }} at {{ entity.created|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-lg-3 control-label">Updated</label>
+                            <div class="col-lg-9 controls">
+                                <span class="text">{{ entity.updatedby }} at {{ entity.updated|date('d-m-Y H:i:s') }}</span>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-lg-offset-2 col-lg-10">
+                                <a href="{{ path('meal_edit', { 'id': entity.id }) }}" class="btn btn-primary" >Edit</a>
+                                <a href="{{ path('meal') }}" class="btn btn-default" >Back</a>
+                            </div>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
